syntax = "proto3";
option go_package = "github.com/sreway/yametrics-v2/services/metric/v1";
package metric;

enum Type {
  GAUGE = 0;
  COUNTER = 1;
}

message Metric {
  string id = 1;
  Type type = 2;
  int64 delta = 3;
  double value = 4;
  string hash = 5;
}

message AddMetricRequest {
  Metric metric = 1;
}

message AddMetricResponse {}

message BatchAddMetricRequest {
  repeated Metric metrics = 1;
}

message BatchAddMetricResponse {}

message GetMetricRequest {
  string id = 1;
  Type type = 2;
}

message GetMetricResponse {
  Metric metric = 1;
}

message GetManyMetricRequest {}

message GetManyMetricResponse {
  repeated Metric metrics = 1;
}

message StorageCheckMetricRequest {}

message StorageCheckMetricResponse {}

service MetricService{
  rpc Add(AddMetricRequest) returns (AddMetricResponse);
  rpc BatchAdd(BatchAddMetricRequest) returns (BatchAddMetricResponse);
  rpc Get(GetMetricRequest) returns (GetMetricResponse);
  rpc GetMany(GetManyMetricRequest) returns (GetManyMetricResponse);
  rpc StorageCheck(StorageCheckMetricRequest) returns (StorageCheckMetricResponse);
}